Fix issue where text wrapping in item-display-page could break column sizing slightly

--- a/assets/css/item.css
+++ b/assets/css/item.css
@@ -36,6 +36,7 @@
 }
 
 .item-details-cost-quantity {
+    flex-shrink: 0;
     margin-right: 5px;
     text-align: right;
     width: 36px;
